# event-tpc

./: event_tpc.py  loss.py  metric.py  nn.py  preprocessing.py  pyproject.toml  train_event_tpc.py  utils.py
configs/: event-tpc_adni.yml  event-tpc_sad.yml
